--- a/permission-system/backend/alembic.ini
+++ b/permission-system/backend/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/permission_db
+sqlalchemy.url = postgresql://permission_user:permission_pass@localhost:5432/permission_system
 
 [post_write_hooks]
 
