--- a/permission-system/backend/requirements.txt
+++ b/permission-system/backend/requirements.txt
@@ -1,11 +1,30 @@
+# Web框架和API相关
 fastapi==0.104.1
 uvicorn==0.24.0
+python-multipart==0.0.6
+
+# 数据库相关
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.12.1
+
+# 认证与安全相关
 python-jose==3.3.0
 passlib==1.7.4
-python-multipart==0.0.6
+bcrypt==4.0.1
+
+# 配置与数据验证
 pydantic==2.4.2
 python-dotenv==1.0.0
-bcrypt==4.0.1
+
+# Apache Ranger权限集成
+apache-ranger==0.0.4
+requests==2.31.0
+
+# LDAP集成
+ldap3==2.9.1
+
+# 数据库连接
+pyhive==0.7.0
+thrift==0.16.0
+thrift-sasl==0.4.3
