--- a/permission-system/frontend/nginx.conf
+++ b/permission-system/frontend/nginx.conf
@@ -2,33 +2,20 @@ server {
     listen 80;
     server_name localhost;
     
-    # 静态文件目录
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
     
-    # 代理API请求到后端服务
-    location /api {
-        proxy_pass http://backend:8000;
+    # 配置API代理 - 增加代理转发解决Docker网络隔离问题
+    location /api/ {
+        # 使用代理转发到后端服务
+        proxy_pass http://API_HOST:38000;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    
-    # 代理文档请求到后端服务
-    location /docs {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-    
-    # 代理Redoc请求到后端服务
-    location /redoc {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
     }
 }
